Bug 1651419 - Check `img1/img2` for NULL before dereferencing them in nsDOMWindowUtils::CompareCanvases(). r=bas,alchen

Differential Revision: https://phabricator.services.mozilla.com/D83141