dom/base/nsDOMWindowUtils.cpp
@@ -1363,6 +1363,11 @@ nsDOMWindowUtils::CompareCanvases(nsISupports* aCanvas1, nsISupports* aCanvas2,
   RefPtr<DataSourceSurface> img1 = CanvasToDataSourceSurface(canvas1);
   RefPtr<DataSourceSurface> img2 = CanvasToDataSourceSurface(canvas2);
 
+  if (img1 == nullptr || img2 == nullptr ||
+      img1->GetSize() != img2->GetSize()) {
+    return NS_ERROR_FAILURE;
+  }
+
   if (img1->Equals(img2)) {
     // They point to the same underlying content.
     return NS_OK;
@@ -1371,8 +1376,7 @@ nsDOMWindowUtils::CompareCanvases(nsISupports* aCanvas1, nsISupports* aCanvas2,
   DataSourceSurface::ScopedMap map1(img1, DataSourceSurface::READ);
   DataSourceSurface::ScopedMap map2(img2, DataSourceSurface::READ);
 
-  if (img1 == nullptr || img2 == nullptr || !map1.IsMapped() ||
-      !map2.IsMapped() || img1->GetSize() != img2->GetSize() ||
+  if (!map1.IsMapped() || !map2.IsMapped() ||
       map1.GetStride() != map2.GetStride()) {
     return NS_ERROR_FAILURE;
   }
